rustdocs/errors/rust-bitcoin-units-src-weight.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/weight.rs:5:5
  |
5 | use core::num::NonZeroU64;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/weight.rs:6:5
  |
6 | use core::{fmt, ops};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved imports `crate::parse_int`, `crate::Amount`, `crate::FeeRate`, `crate::NumOpResult`
  --> ../rust-bitcoin/units/src/weight.rs:13:13
   |
13 | use crate::{parse_int, Amount, FeeRate, NumOpResult};
   |             ^^^^^^^^^  ^^^^^^  ^^^^^^^  ^^^^^^^^^^^ no `NumOpResult` in the root
   |             |          |       |
   |             |          |       no `FeeRate` in the root
   |             |          no `Amount` in the root
   |             no `parse_int` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/weight.rs:197:8
    |
197 | crate::internal_macros::impl_op_for_references! {
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/weight.rs:245:8
    |
245 | crate::internal_macros::impl_add_assign!(Weight);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/weight.rs:246:8
    |
246 | crate::internal_macros::impl_sub_assign!(Weight);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
